PCI8510/LabWindows/PCI8510.h

//#################### AD硬件参数PCI8510_PARA_AD定义 #####################
// 用于AD采样的实际硬件参数
typedef struct _PCI8510_PARA_AD     
{	
	LONG Gains[8];			// 模拟量增益选择阵列，分别控制8个通道
	LONG Frequency;         // 采集频率, 单位为Hz, [1, 500000]
	LONG InputRange;		// 量程选择
	LONG TriggerMode;		// 触发模式选择
	LONG TriggerSource;		// 触发源选择
	LONG TriggerType;		// 触发类型选择(边沿触发/脉冲触发)
	LONG TriggerDir;		// 触发方向选择(正向/负向触发)
	LONG TrigLevelVolt;		// 触发电平(±10000mV)
	LONG ClockSource;		// 内外时钟选择
	LONG bClockOutput;      // 是否将时钟信号输出,=TRUE:允许输出, =FALSE:禁止输出
	LONG OutTrigSource;		// Trig信号输入/输出源
	LONG OutTrigSourceDir;	// Trig信号输入/输出方向选择，=TRUE:允许输出, =FALSE:允许输入
}PCI8510_PARA_AD,*PPCI8510_PARA_AD;
//*************************************************************************************
// 用于AD采样的实际硬件参数
typedef struct _PCI8510_STATUS_AD     
{
	LONG bNotEmpty;		// 板载FIFO存储器的非空标志，=TRUE非空， = FALSE 空
	LONG bHalf;			// 板载FIFO存储器的半满标志，=TRUE半满以上， = FALSE 半满以下
	LONG bOverflow;		// 板载FIFO存储器的动态溢出标志，= TRUE已发生溢出， = FALSE　未发生溢出
} PCI8510_STATUS_AD, *PPCI8510_STATUS_AD;
typedef struct _PCI8510_STATUS_DMA     
{
	LONG iCurSegmentID;								// 当前段缓冲ID,表示DMA正在传输的缓冲区段
	LONG bSegmentSts[64];			// 各个缓冲区的新旧状态,=1表示该相应缓冲区数据为新,否则为旧
	LONG bBufferOverflow;							// 返回溢出状态
} PCI8510_STATUS_DMA, *PPCI8510_STATUS_DMA;
	//######################## 设备对象管理函数 ##############################
	HANDLE DEVAPI FAR PASCAL PCI8510_CreateDevice(int DeviceLgcID);     // 用逻辑号创建设备对象
	int DEVAPI FAR PASCAL PCI8510_GetDeviceCount(HANDLE hDevice); // 取得设备总台数
	BOOL DEVAPI FAR PASCAL PCI8510_GetDeviceCurrentID(HANDLE hDevice, PLONG DeviceLgcID, PLONG DevicePhysID);
    BOOL DEVAPI FAR PASCAL PCI8510_ReleaseDevice(HANDLE hDevice); // 仅释放设备对象
	//####################### AD数据读取函数 #################################
	// 适于大多数普通用户，这些接口最简单、最快捷、最可靠，让用户不必知道设备
	// 低层复杂的硬件控制协议和繁多的软件控制编程，仅用下面的初始化设备和读取
	// AD数据两个函数便能轻松高效地实现高速、连续的数据采集

	// AD程序查询方式函数
	BOOL DEVAPI FAR PASCAL PCI8510_InitDeviceProAD(			// 初始化设备，当返回TRUE后,设备即准备就绪.
									HANDLE hDevice,			// 设备对象,它由CreateDevice函数创建
									PPCI8510_PARA_AD pADPara); // 硬件参数, 它仅在此函数中决定硬件状态
    BOOL DEVAPI FAR PASCAL PCI8510_StartDeviceProAD(		// 在初始化之后，启动设备
									HANDLE hDevice);		// 设备对象句柄,它由CreateDevice函数创建
	BOOL DEVAPI FAR PASCAL PCI8510_ReadDeviceProAD_Npt(		// 当AD标志有效时，用此函数读取设备上的AD数据(程序非空方式)
									HANDLE hDevice,			// 设备句柄,它由CreateDevice函数创建
									ULONG ADBuffer[],		// 接受原始AD数据的用户缓冲区
									ULONG nReadSizeWords,	// 相对于偏移点后读入的数据长度(字)
									PLONG nRetSizeWords);   // 返回实际读取的长度(字)
	BOOL DEVAPI FAR PASCAL PCI8510_GetDevStatusProAD(		// 在AD采样过程中取得设备的各种状态,返回值表示函数是否成功
									HANDLE hDevice,			// 设备句柄,它由CreateDevice函数创建
									PPCI8510_STATUS_AD pADStatus); // AD的各种信息结构体
	BOOL DEVAPI FAR PASCAL PCI8510_ReadDeviceProAD_Half(	// 当AD标志有效时，用此函数读取设备上的AD数据(程序半满方式)
									HANDLE hDevice,			// 设备句柄,它由CreateDevice函数创建
									ULONG ADBuffer[],		// 接受原始AD数据的用户缓冲区
									ULONG nReadSizeWords,	// 相对于偏位点后读入的数据长度(字)
									PLONG nRetSizeWords);	// 返回实际读取的长度(字)
		
    BOOL DEVAPI FAR PASCAL PCI8510_StopDeviceProAD(			// 在启动设备之后，暂停设备
									HANDLE hDevice);		// 设备对象句柄,它由CreateDevice函数创建
	BOOL DEVAPI FAR PASCAL PCI8510_ReleaseDeviceProAD(		// 关闭AD设备,禁止传输,且释放资源
									HANDLE hDevice);		// 设备句柄,它由CreateDevice函数创建
	// AD直接内存(DMA)方式函数
	BOOL DEVAPI FAR PASCAL PCI8510_InitDeviceDmaAD(			// 初始化设备，当返回TRUE后,设备即准备就绪.
									HANDLE hDevice,			// 设备对象,它由CreateDevice函数创建
									HANDLE hDmaEvent,		// DMA事件句柄,它由CreateSystemEvent创建
									ULONG ADBuffer[],		// 用户缓冲区,最好为两维数组
									ULONG nReadSizeWords,	// 每次DMA时,用户从指定缓冲应读取的实际长度(要小于或等于nSegmentSizeWords)
									LONG nSegmentCount,		// 缓冲分段的数量,取值范围为2-128
									ULONG nSegmentSizeWords,// 缓冲区分段的段长(必须等于FIFO半满长度)
									PPCI8510_PARA_AD pADPara);	// 硬件参数, 它仅在此函数中决定硬件状态
    BOOL DEVAPI FAR PASCAL PCI8510_StartDeviceDmaAD(		// 在初始化之后，启动设备
									HANDLE hDevice);		// 设备对象句柄,它由CreateDevice函数创建
	BOOL DEVAPI FAR PASCAL PCI8510_GetDevStatusDmaAD(		// 在AD采样过程中取得DMA的有关状态,返回值表示函数是否成功
									HANDLE hDevice,			// 设备句柄,它由CreateDevice函数创建
									PPCI8510_STATUS_DMA pDMAStatus); // 获得的DMA工作状态
	BOOL DEVAPI FAR PASCAL PCI8510_SetDevStatusDmaAD(		// 在AD采样过程中设置DMA的有关状态,返回值表示函数是否成功
									HANDLE hDevice,			// 设备句柄,它由CreateDevice函数创建
									LONG iClrBufferID);		// 要清除的缓冲区ID,将其置为0
		
    BOOL DEVAPI FAR PASCAL PCI8510_StopDeviceDmaAD(			// 在启动设备之后，暂停设备
									HANDLE hDevice);		// 设备对象句柄,它由CreateDevice函数创建
	BOOL DEVAPI FAR PASCAL PCI8510_ReleaseDeviceDmaAD(		// 关闭AD设备,禁止传输,且释放资源
									HANDLE hDevice);		// 设备句柄,它由CreateDevice函数创建
	BOOL DEVAPI FAR PASCAL PCI8510_ADCalibration(			// 设备校准函数
									HANDLE hDevice);		// 设备对象句柄